--- a/index.css
+++ b/index.css
@@ -49,3 +49,14 @@ body {
     line-height: normal;
     word-spacing: normal;
 }
+
+button{
+    background-color: blueviolet;
+    color: white;
+    border-radius: 9px;
+    height: 50px;
+    width: 200px;
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    border-color: black;
+}
