--- a/Private/p_register_user/registeruser.css
+++ b/Private/p_register_user/registeruser.css
@@ -40,7 +40,46 @@ h1 {
 body {
     color: black;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 70px;
+    font-size: 20px;
+    font-weight: 100;
+    font-style: normal;
+    text-align: left;
+    text-decoration: none;
+    text-transform: none;
+    line-height: normal;
+    word-spacing: normal;
+}
+
+main {
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    font-weight: 100;
+    font-style: normal;
+    text-align: left;
+    text-decoration: none;
+    text-transform: none;
+    line-height: normal;
+    word-spacing: normal;
+}
+
+form {
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    font-weight: 100;
+    font-style: normal;
+    text-align: left;
+    text-decoration: none;
+    text-transform: none;
+    line-height: normal;
+    word-spacing: normal;
+}
+
+label {
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
     font-weight: 100;
     font-style: normal;
     text-align: left;
