--- a/Private/p_adminpanel/adminpanel.css
+++ b/Private/p_adminpanel/adminpanel.css
@@ -1,8 +1,8 @@
-h1 {
+h3 {
     color: black;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 70px;
-    font-weight: 100;
+    font-size: 30px;
+    font-weight: bold;
     font-style: normal;
     text-align: left;
 }
@@ -14,6 +14,15 @@ body {
     font-weight: 100;
     font-style: normal;
     text-align: left;
+}
+
+table {
+    background-color: rgb(247, 248, 231);
+}
+
+th {
+    background-color: rgb(22, 169, 255);
+    text-align: center;
 }
 
 a {
@@ -71,10 +80,28 @@ button {
     color: black;
     border: none;
     outline: none;
+    text-decoration: underline;
 }
 
 .header-adminpanel-right-nav ul li a {
     padding: 0 10px 0 1px;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.admin-panel-form {
+    color: black;
+    font-weight: bold;
+    font-size: larger;
+    text-align: center;
+}
+
+.admin-users-panel-form {
+    color: black;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 0px 50px;
+    font-weight: bold;
 }
