--- a/Private/p_forgotpswd/forgotpswd.css
+++ b/Private/p_forgotpswd/forgotpswd.css
@@ -1,10 +1,19 @@
-h1 {
+h3 {
     color: black;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 70px;
-    font-weight: 100;
+    font-size: 20px;
+    font-weight: 1500;
     font-style: normal;
-    text-align: left;
+    text-align: center;
+}
+
+h4 {
+    color: red;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 40px;
+    font-weight: 1500;
+    font-style: normal;
+    text-align: center;
 }
 
 body {
@@ -13,7 +22,6 @@ body {
     font-size: 20px;
     font-weight: 100;
     font-style: normal;
-    text-align: left;
 }
 
 a {
@@ -90,4 +98,13 @@ a {
     padding: 0 10px 0 1px;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.forgot-pswd-form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 0px 50px;
 }
