--- a/Private/p_userpanel/userpanel.css
+++ b/Private/p_userpanel/userpanel.css
@@ -1,11 +1,21 @@
-h1 {
+h2 {
     color: black;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
-    font-weight: 100;
+    font-weight: 1500;
     font-style: normal;
     text-align: left;
 }
+
+h3 {
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    font-weight: 1500;
+    font-style: normal;
+    text-align: center;
+}
+
 
 body {
     color: black;
@@ -73,10 +83,21 @@ button {
     color: black;
     border: none;
     outline: none;
+    text-decoration: underline;
 }
 
 .header-userpanel-right-nav ul li a {
     padding: 0 10px 0 1px;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.user-profile-form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 0px 50px;
+    line-height: 1.5;
 }
