--- a/Private/p_usertables/usertables.css
+++ b/Private/p_usertables/usertables.css
@@ -5,10 +5,6 @@ h1 {
     font-weight: 100;
     font-style: normal;
     text-align: left;
-    text-decoration: none;
-    text-transform: none;
-    line-height: normal;
-    word-spacing: normal;
 }
 
 body {
@@ -18,10 +14,15 @@ body {
     font-weight: 100;
     font-style: normal;
     text-align: left;
-    text-decoration: none;
-    text-transform: none;
-    line-height: normal;
-    word-spacing: normal;
+}
+
+table {
+    background-color: rgb(247, 248, 231);
+}
+
+th {
+    background-color: rgb(22, 169, 255);
+    text-align: center;
 }
 
 a {
@@ -79,6 +80,7 @@ button {
     color: black;
     border: none;
     outline: none;
+    text-decoration: underline;
 }
 
 .header-tablespanel-left-nav ul li a {
@@ -111,10 +113,26 @@ button {
     color: black;
     border: none;
     outline: none;
+    text-decoration: underline;
 }
 
 .header-tablespanel-right-nav ul li a {
     padding: 0 10px 0 1px;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.user-panel-form {
+    color: black;
+    font-weight: bold;
+    font-size: larger;
+    text-align: center;
+}
+
+.user-form-table {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 0px 50px;
 }
