--- a/Private/p_adminpanel/adminpanel.css
+++ b/Private/p_adminpanel/adminpanel.css
@@ -43,6 +43,8 @@ button {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    top: 0;
 }
 
 .header-adminpanel-logo {
@@ -87,6 +89,10 @@ button {
     padding: 0 10px 0 1px;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.main-doc {
+    margin-top: 75px;
 }
 
 .admin-panel-form {
