--- a/Public/p_about/about.css
+++ b/Public/p_about/about.css
@@ -2,7 +2,15 @@ h1 {
     color: black;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
-    font-weight: 100;
+    font-weight: bold;
+    text-align: left;
+}
+
+h2 {
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    font-weight: bold;
     text-align: left;
 }
 
@@ -12,6 +20,12 @@ body {
     font-size: 20px;
     font-weight: 100;
     text-align: left;
+}
+
+footer {
+    left: 0;
+    bottom: 0;
+    width: 100%;
 }
 
 a {
@@ -28,6 +42,8 @@ a {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    top: 0;
 }
 
 .header-about-logo {
@@ -88,4 +104,24 @@ a {
     padding: 0 10px 0 1px;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.main-doc {
+    margin-top: 75px;
+}
+
+.company-partners {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+}
+
+.partners-logos {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 400px;
+    height: 200px;
 }
