--- a/Private/p_forbidden/forbidden.css
+++ b/Private/p_forbidden/forbidden.css
@@ -26,6 +26,9 @@ body {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 .header-forbidden-logo {
