--- a/Private/p_forgotpswd/forgotpswd.css
+++ b/Private/p_forgotpswd/forgotpswd.css
@@ -38,6 +38,9 @@ a {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 .header-forgot-logo {
