--- a/Private/p_register_user/registeruser.css
+++ b/Private/p_register_user/registeruser.css
@@ -10,10 +10,8 @@ h3 {
 h4 {
     color: red;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 40px;
-    font-weight: 1500;
-    font-style: normal;
-    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
 }
 
 body {
@@ -56,6 +54,7 @@ button {
     align-items: center;
     position: fixed;
     top: 0;
+    left: 0;
 }
 
 .header-registeruser-logo {
@@ -146,4 +145,9 @@ button {
 
 .main-doc {
     margin-top: 75px;
+}
+
+.notifications-popup {
+    height: fit-content;
+    text-align: center;
 }
