--- a/Public/p_register/register.css
+++ b/Public/p_register/register.css
@@ -34,6 +34,9 @@ a {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 .header-register-logo {
