--- a/main.css
+++ b/main.css
@@ -47,6 +47,9 @@ button {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 .header-main-logo {
